syntax = "proto3";

service UserService {
    rpc GetAll (Empty) returns (UserList) {}
    rpc Get (UserRequestId) returns (User) {}
}

message Empty {}

message User {
    string id = 1;
    string name = 2;
    string password = 3;
    string token = 4;
    string userType = 5;
    string status = 6;
}

message UserList {
    repeated User users = 1;
}

message UserRequestId {
    string id = 1;
}